gitops/netflix/jellyfin/jellyfin-svc.yaml
apiVersion: v1
kind: Service 
metadata:
  name: jellyfin
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8096
