gitops/netflix/jellyfin/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: netflix.dixneuf19.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 80
  tls:
  - hosts:
    - netflix.dixneuf19.fr
    secretName: netflix-dixneuf19-fr-tls
